BUILD-89: added 'Info Builds' and unit-test file creation fallback.